src/objects/Care_Plan_Objective__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>Drug &amp; Alcohol Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical &amp; Psychological Problems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Problems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care Plan Administration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Care_plan_step_count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Care plan step count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Care Plan Objectives</relationshipLabel>
        <relationshipName>Care_Plan_Objectives1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comment_Reasons_achieved_or_not__c</fullName>
        <label>Comment: Reasons achieved or not!</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_completed__c</fullName>
        <label>Date completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_objective_set__c</fullName>
        <label>Date objective set</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>How_will_progress_be_measured__c</fullName>
        <inlineHelpText>Indicators of change. reduction of use of heroine to 40ml in four months</inlineHelpText>
        <label>How will progress be measured</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Latest_Outcome__c</fullName>
        <label>Latest Outcome</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Agency_name__c</fullName>
        <label>Lead Agency name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Key_Worker_name__c</fullName>
        <label>Lead Key Worker name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_agency_from_other_agency__c</fullName>
        <label>Lead agency from other agency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_key_worker_from_other_agency__c</fullName>
        <label>Lead key worker from other agency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Review_Date__c</fullName>
        <label>Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Objective_Status__c</fullName>
        <label>Objective Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Objective_and_Timescale__c</fullName>
        <label>Objective and Timescale</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Outcome__c</fullName>
        <label>Overall Outcome</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referred_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred to</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Care Plan Objectives</relationshipLabel>
        <relationshipName>Care_Plan_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_to_from_other_agency__c</fullName>
        <label>Referred to from other agency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Frame_short__c</fullName>
        <label>Time Frame (short)</label>
        <picklist>
            <picklistValues>
                <fullName>Short-term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium-term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long-term</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tools_used__c</fullName>
        <inlineHelpText>e.g. Use Pattern Chart or TOPS or data from metadone clinic!</inlineHelpText>
        <label>Tools: How are we going to measure this?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Work_to_be_done_to_achieve_objective__c</fullName>
        <label>Work to be done to achieve objective</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Care Plan Objective</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Date_objective_set__c</columns>
        <columns>Next_Review_Date__c</columns>
        <columns>Date_completed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Care Plan Objective</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IM00000008u9LMAQ_00NM0000000f8U7MAI</fullName>
        <active>true</active>
        <field>Enrolment__c.Care_Plan_Objective__c</field>
        <filterItems>
            <field>Care_Plan_Objective__c.Client__c</field>
            <operation>equals</operation>
            <valueField>$Source.Young_Person__c</valueField>
        </filterItems>
        <infoMessage>Showing only care plan objectives for this attendee</infoMessage>
        <isOptional>true</isOptional>
        <name>Enrolment_Care Plan Objective</name>
        <sourceObject>Enrolment__c</sourceObject>
    </namedFilters>
    <pluralLabel>Care Plan Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>